--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,8 @@ services:
              
       working_dir: /golang
       container_name: my_go
+      ports:
+              - "8080:8080"
       networks:
               - net
       depends_on:
